; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_read_objmem.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_read_objmem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_hardware = type { %struct.bcma_device* }
%struct.bcma_device = type { i32 }

@objdata = common dso_local global i32 0, align 4
@objaddr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.brcms_hardware*, i32, i32)* @brcms_b_read_objmem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @brcms_b_read_objmem(%struct.brcms_hardware* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.brcms_hardware*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.bcma_device*, align 8
  %8 = alloca i32, align 4
  store %struct.brcms_hardware* %0, %struct.brcms_hardware** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.brcms_hardware*, %struct.brcms_hardware** %4, align 8
  %10 = getelementptr inbounds %struct.brcms_hardware, %struct.brcms_hardware* %9, i32 0, i32 0
  %11 = load %struct.bcma_device*, %struct.bcma_device** %10, align 8
  store %struct.bcma_device* %11, %struct.bcma_device** %7, align 8
  %12 = load i32, i32* @objdata, align 4
  %13 = call i32 @D11REGOFFS(i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load %struct.bcma_device*, %struct.bcma_device** %7, align 8
  %15 = load i32, i32* @objaddr, align 4
  %16 = call i32 @D11REGOFFS(i32 %15)
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %5, align 4
  %19 = ashr i32 %18, 2
  %20 = or i32 %17, %19
  %21 = call i32 @bcma_write32(%struct.bcma_device* %14, i32 %16, i32 %20)
  %22 = load %struct.bcma_device*, %struct.bcma_device** %7, align 8
  %23 = load i32, i32* @objaddr, align 4
  %24 = call i32 @D11REGOFFS(i32 %23)
  %25 = call i32 @bcma_read32(%struct.bcma_device* %22, i32 %24)
  %26 = load i32, i32* %5, align 4
  %27 = and i32 %26, 2
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %3
  %30 = load i32, i32* %8, align 4
  %31 = add nsw i32 %30, 2
  store i32 %31, i32* %8, align 4
  br label %32

32:                                               ; preds = %29, %3
  %33 = load %struct.bcma_device*, %struct.bcma_device** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @bcma_read16(%struct.bcma_device* %33, i32 %34)
  ret i32 %35
}

declare dso_local i32 @D11REGOFFS(i32) #1

declare dso_local i32 @bcma_write32(%struct.bcma_device*, i32, i32) #1

declare dso_local i32 @bcma_read32(%struct.bcma_device*, i32) #1

declare dso_local i32 @bcma_read16(%struct.bcma_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
